server working basic

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ CFLAGS=-std=c++0x -Wall -I$(IDIR)
 LFLAGS=-Wall
 ODIR=obj
 
-_DEPS = RDTSegment.h utility.cpp
+_DEPS = RDTSegment.h Packet.h utility.cpp
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
 _OBJ = myserver.o myclient.o
@@ -15,7 +15,7 @@ all: myserver myclient
 $(ODIR)/%.o: %.cpp $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-myserver: obj/myserver.o
+myserver: obj/myserver.o obj/Packet.o
 	$(CC) -o $@ $^ $(CFLAGS)
 
 myclient: obj/myclient.o
